grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                $.use_declaration,
                $.public_declaration,
                $.extern_declaration,
                $.type_alias_declaration,
                $.record_declaration,
                $.union_declaration,
                $.value_declaration,
                $.variable_declaration,
                $.function_declaration,
                $.test_declaration,
                $.comptime_if_statement,
                $.comptime_expression_statement,
            ),

        // =========================================================================
        // Comments
        // =========================================================================
        comment: ($) => token(seq("#", /.*/)),

        // =========================================================================
        // Declarations
        // =========================================================================

        // use [alias:] module.path;
        value_declaration: ($) =>
            seq(
                "val",
                field("name", $.identifier),
                ":",
                field("type", $._type),
                "=",
                field("value", $._expression),
                ";",
            ),

        // var name: type [= expr];
        _expression: ($) =>
            choice(
                $.assignment_expression,
                $.binary_expression,
                $.unary_expression,
                $.cast_expression,
                $.typed_literal,
                $.array_literal,
                $.record_literal,
                $.union_literal,
                $.comptime_expression,
                $._postfix_expression,
            ),

        // _postfix_expression groups call, index, field access, and primary
        // atoms into a single left-recursive chain. This ensures the LR parser
        // keeps [ ( . as valid shifts after reducing an identifier, rather than
        // eagerly reducing through _expression into expression_statement.
        nil_literal: ($) => "nil",

        // =========================================================================
        // Types
        // =========================================================================

        _type: ($) =>
            choice(
                $.primitive_type,
                $.pointer_type,
                $.readonly_pointer_type,
                $.array_type,
                $.function_type,
                $.generic_type,
                $.record_type,
                $.union_type,
                $.type_identifier,
            ),

        primitive_type: ($) =>
            choice(
                "u8",
                "u16",
                "u32",
                "u64",
                "i8",
                "i16",
                "i32",
                "i64",
                "f32",
                "f64",
                "ptr",
            ),

        // *type
        type_identifier: ($) => sep1($.identifier, "."),

        // =========================================================================
        // Literals
        // =========================================================================

        // Integer literals: decimal, hex, binary, octal, with optional underscores
        // and optional numeric type suffix (u8, i64, f32, etc.)
        //
        // Examples: 42, 0xFF, 0b1010, 0o77, 1_000_000, 42i64, 0xFFu32
        integer_literal: ($) =>
            token(
                choice(
                    // Hex with optional suffix
                    seq(
                        "0",
                        choice("x", "X"),
                        /[0-9a-fA-F][0-9a-fA-F_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Binary with optional suffix
                    seq(
                        "0",
                        choice("b", "B"),
                        /[01][01_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Octal with optional suffix
                    seq(
                        "0",
                        choice("o", "O"),
                        /[0-7][0-7_]*/,
                        optional(TYPE_SUFFIX),
                    ),
                    // Decimal with optional suffix
                    seq(/[0-9][0-9_]*/, optional(TYPE_SUFFIX)),
                ),
            ),

        // Float literals: must contain a decimal point, with optional exponent
        // and optional numeric type suffix.
        //
        // Examples: 3.14, 1.0, 0.5e10, 1.5E-3, 3.14f64, 1_000.5_0
        float_literal: ($) =>
            token(
                seq(
                    /[0-9][0-9_]*/,
                    ".",
                    /[0-9][0-9_]*/,
                    // Optional exponent part: e/E followed by optional sign and digits
                    optional(seq(/[eE]/, optional(/[+-]/), /[0-9][0-9_]*/)),
                    optional(TYPE_SUFFIX),
                ),
            ),

        // Character literals: 'c' with escape sequences
        //
        // Escape sequences: \n \t \r \\ \' \" \0 \xNN
        char_literal: ($) =>
            token(
                seq(
                    "'",
                    choice(
                        // Simple escape sequences
                        /\\['"\\ntr0]/,
                        // Hex escape: \xNN
                        /\\x[0-9a-fA-F]{2}/,
                        // Any single character except backslash and single quote
                        /[^'\\]/,
                    ),
                    "'",
                ),
            ),

        // String literals: "..." with escape sequences.
        // Includes single-line strings and triple-quoted multiline strings.
        //
        // Single-line: "hello\nworld"
        // Multiline:   """multi
        //                 line"""
        //
        // Escape sequences: \n \t \r \\ \' \" \0 \xNN
        string_literal: ($) =>
            token(
                choice(
                    // Triple-quoted multiline string: """..."""
                    // Content can include newlines, single quotes, double quotes (as
                    // long as fewer than three in a row without backslash escape).
                    seq(
                        '"""',
                        repeat(
                            choice(
                                /\\./, // any escape sequence
                                /[^"\\]/, // any char except quote or backslash
                                /"[^"\\]/, // single quote followed by non-quote
                                /""[^"\\]/, // two quotes followed by non-quote
                            ),
                        ),
                        optional(/""/), // trailing quotes before the close
                        '"""',
                    ),
                    // Regular single-line string: "..."
                    seq(
                        '"',
                        repeat(
                            choice(
                                // Simple escape sequences
                                /\\['"\\ntr0]/,
                                // Hex escape: \xNN
                                /\\x[0-9a-fA-F]{2}/,
                                // Any character except backslash, double quote, and newline
                                /[^"\\\n]/,
                            ),
                        ),
                        '"',
                    ),
                ),
            ),

        // =========================================================================
        // Identifiers
        // =========================================================================

        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    },
});

/**
 * Comma-separated list of one or more items.
 */
function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
